# loc-spotting-utils

./: .gitignore  README.md  add-files-to-spec  main.spec  pyproject.toml
.github/workflows/: ci.yml
loc-spotting-utils/: foo.py  hello_world.py
src/: GCodeUtils.py  GUI.py  IOUtils.py  config.toml  config_model.py  dummy.gcode  eltypes.py  gui.py  hello_world.py  highlighter.py  main.py  new_dummy.gcode  operators.py  paths.py  test.py
