[tool.poetry]
name = "loc-spotting-utils"
version = "0.1.0"
description = "Python utilties to assist in DIY microarray spotting using a 3D printer"
authors = ["Orestis Ousoultzoglou <orousoultzoglou@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "loc_spotting_utils"}]

[tool.poetry.dependencies]
python = "~3.11"
pyside6 = "^6.4.0.1"

pyinstaller = { version = "^5.6.2", optional = true }
pygcode = "^0.2.1"
pyprojroot = "^0.2.0"

[tool.poetry.extras]
build = ["pyinstaller"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
